/* * Copyright 2006-2019 Marcel Baumann * * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain * a copy of the License at * *        http://www.apache.org/licenses/LICENSE-2.0 * * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations * under the License. *//** * The set of gradle command line special commands will seldom use: * To publish all modules in local maven repository         gradle publishToMavenLocal -Pmode=rel * To publish all module in maven central repository        gradle publishMavenJavaPublicationToMavenLocal -Pmode=prod * To generate static and aggregate code coverage metrics   gradle build jacocoTestReport jacocoRootReport -Pmode=int * To detect newer versions of libraries                    gradle dependencyUpdates -Drevision=release */plugins {    id 'maven-publish'    id 'signing'    id "com.github.spotbugs" version "2.0.0"    id "org.sonarqube" version "2.7"    id "info.solidsoft.pitest" version "1.4.0"    id "com.github.ben-manes.versions" version "0.21.0"}ext {    // support conditional gradle script execution for dev, int, prod. Used for example to disable slow reporting plugins    mode = "dev"}apply plugin: 'jacoco'pitest {    targetClasses = ['net.tangly.*']    testPlugin = "junit5"    threads = 8    outputFormats = ['XML', 'HTML']    timestampedReports = false}allprojects {    apply plugin: 'java'    apply plugin: 'jacoco'    apply plugin: 'maven-publish'    apply plugin: 'signing'    if (mode.equalsIgnoreCase('int')) {        apply plugin: 'checkstyle'        apply plugin: 'com.github.spotbugs'        apply plugin: 'pmd'        // apply plugin: 'info.solidsoft.pitest'    }    repositories {        mavenLocal()        mavenCentral()        jcenter()        maven {            url "http://maven.vaadin.com/vaadin-addons"        }    }    if (mode.equalsIgnoreCase('int')) {        checkstyle {            configFile = rootProject.file('src/main/resources/checkstyle-tangly.xml')            ignoreFailures = true        }        pmd {            ruleSetFiles = files(rootProject.file('src/main/resources/pmd-tangly.xml'))            ignoreFailures = true            rulePriority = 3        }        spotbugs {            ignoreFailures = true            effort = "max"            reportLevel = "low"        }        tasks.withType(Checkstyle) {            reports {                xml.enabled false                html.enabled true            }        }        tasks.withType(com.github.spotbugs.SpotBugsTask) {            reports {                xml.enabled false                html.enabled true            }        }        tasks.withType(Pmd) {            reports {                xml.enabled false                html.enabled true            }        }    }    jacocoTestReport {        reports {            xml.enabled false            html.enabled true        }    }}def allTestCoverageFile = "$buildDir/jacoco/allTestCoverage.exec"sonarqube {    properties {        property "sonar.jacoco.reportPaths", allTestCoverageFile    }}// task to merge all subproject jacoco reports so that sonarqube has the correct test coverage resultstask jacocoMergeTests(type: JacocoMerge) {    destinationFile = file(allTestCoverageFile)    executionData = project.fileTree(dir: '.', include: '**/build/jacoco/test.exec')}// task to visualize aggregated code coverage reports for multiple modulestask jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {    dependsOn = subprojects.test    additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)    sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)    classDirectories = files(subprojects.sourceSets.main.output)    executionData = files(subprojects.jacocoTestReport.executionData)    reports {        html.enabled = true        xml.enabled = false        csv.enabled = false    }}subprojects {    sourceCompatibility = JavaVersion.VERSION_12    targetCompatibility = JavaVersion.VERSION_12    ext {        jacksonVersion = '2.9.8'        junitVersion = '5.4.1'        slf4jVersion = '1.7.26'        mockitoVersion = '2.25.1'        assertjVersion = '3.12.2'        annotationsVersion = '17.0.0'        archUnitVersion = '0.10.2'    }    dependencies {        implementation "org.slf4j:slf4j-api:$slf4jVersion"        implementation "org.jetbrains:annotations:$annotationsVersion"        runtime "org.slf4j:slf4j-simple:$slf4jVersion"        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"        testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"        testImplementation "org.assertj:assertj-core:$assertjVersion"        testImplementation "com.tngtech.archunit:archunit-junit5-api:$archUnitVersion"        testImplementation "com.google.jimfs:jimfs:1.1"        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"        testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:$archUnitVersion"    }    tasks.withType(JavaCompile) {        options.encoding = 'UTF-8'        options.fork = true        options.incremental = true        options.warnings = true        options.deprecation = true        options.compilerArgs += ["-parameters"]        // options.compilerArgs += [""--enable-preview", -parameters", "-Xdoclint:all/public", "-Xlint:all"]    }    test {        useJUnitPlatform()        options {            setExcludeTags(['integration', 'localTest'] as Set)        }        // jvmArgs(['--enable-preview'])        maxParallelForks = 8        failFast = false    }    jar {        doFirst {            manifest {                if (!configurations.runtime.isEmpty()) {                    manifest.attributes(                            'Name': project.name,                            'Automatic-Module-Name': project.ext.moduleName,                            'Specification-Title': "tangly open source library $project.ext.artifactId",                            'Specification-Version': project.version,                            'Specification-Vendor': "tangyly llc, Switzerland (https://www.tangly.net)",                            'Implementation-Title': project.name,                            'Implementation-Version': project.version,                            'Implementation-Vendor': "tangyly llc, Switzerland (https://www.tangly.net)",                            'Class-Path': configurations.runtime.files.collect { it.name }.join(' ')                    )                }            }        }    }    task sourcesJar(type: Jar) {        archiveClassifier = 'sources'        from sourceSets.main.allJava    }    task javadocJar(type: Jar) {        archiveClassifier = 'javadoc'        from javadoc    }    publishing {        publications {            mavenJava(MavenPublication) {                afterEvaluate {                    groupId = project.ext.groupId                    artifactId = project.ext.artifactId                    version = project.version                }                from components.java                artifact sourcesJar                artifact javadocJar                pom {                    afterEvaluate {                        name = project.ext.moduleName                        description = project.description                        url = 'https://tangly-team.bitbucket.io/'                        inceptionYear = project.ext.inceptionYear                    }                    versionMapping {                        usage('java-api') {                            fromResolutionOf('runtimeClasspath')                        }                        usage('java-runtime') {                            fromResolutionResult()                        }                    }                    licenses {                        license {                            name = 'The Apache License, Version 2.0'                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'                        }                    }                    developers {                        developer {                            id = 'marcelbaumann'                            name = 'Marcel Baumann'                            email = 'marcel.baumann@tangly.net'                            organization = 'tangly llc'                            organizationUrl = 'https://www.tangly.net'                        }                    }                    scm {                        connection = 'scm:git:https://bitbucket.org/tangly-team/tangly-os.git'                        developerConnection = 'scm:git:https://bitbucket.org/tangly-team/tangly-os.git'                        url = 'https://bitbucket.org/tangly-team/tangly-os.git'                    }                }            }        }        repositories {            maven {                url "https://oss.sonatype.org/service/local/staging/deploy/maven2"                credentials {                    // credentials are stored under ~/.gradle/gradle.properties and are first copied in local variables to avoid error if not defined                    def mcUsername = project.ext.properties.mavenCentralUsername                    def mcPassword = project.ext.properties.mavenCentralPassword                    username = "$mcUsername"                    password = "$mcPassword"                }                authentication {                    basic(BasicAuthentication)                }            }        }    }    if (mode.equalsIgnoreCase('prod')) {        // currently credentials are not available in the CI pipeline therefore the configuration parameter to avoid spurious execution errors.        signing {            // credentials for signing are stored under ~/.gradle/gradle.properties            // gpg --export-secret-keys > secring.gpg            // gpg --no-default-keyring --keyring ./secring.gpg --list-keys --keyid-format short            sign publishing.publications.mavenJava        }    }    sonarqube {        properties {            property "sonar.jacoco.reportPaths", allTestCoverageFile        }    }}